--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/MauriceOppenberger/Issue-Tracker#readme",
   "dependencies": {
+    "bcrypt": "^3.0.8",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongodb": "^3.5.3",
